<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/circleAreaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/circle_area"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/squareAreaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/square_area"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/piApproxTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/approx_pi"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/explainTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random_org"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>